correcting path, make logo clickable

--- a/template/murl/create.html
+++ b/template/murl/create.html
@@ -17,7 +17,7 @@
                     <p><img src="{% static 'images/top.png' %}" title=""></p>
 				</div>
 				<div class="grid">
-                    <p><img src="{% static 'images/0short.png' %}" title=""></p>
+                    <p><a href="{% url 'url_create' %}"><img src="{% static 'images/0short.png' %}" title=""></a></p>
 		<h3>Short your URL</h3>
 		
         {% if valid %}
