adding github link

--- a/template/murl/create.html
+++ b/template/murl/create.html
@@ -36,7 +36,7 @@
 		</div>
 		<div class="clear"></div>
 		<div class="footer">
-            <p class="a"><a href="#"><img src="{% static 'images/github.png' %}" title=""></a>
+            <p class="a"><a href="https://github.com/Naam/0short"><img src="{% static 'images/github.png' %}" title=""></a>
 		<p>Copyright 2014 &copy Product by <a href="http://0xnaam.fr">Naam</a> and Design by <a href="http://tinydgzz.fr"> TiNyDGZz</a> </p>
 		</div>
 		<div class="clear"></div>
