some magick for visibility

--- a/mini_url/static/css/style.css
+++ b/mini_url/static/css/style.css
@@ -29,6 +29,7 @@ body {
 	background-size: cover;
 	font-family: "Open Sans", arial, sans-serif;
 	font-weight: 300;
+    color: white;
 	
 }
 .wrap {
